--- a/templates/home.html
+++ b/templates/home.html
@@ -5,17 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Flask Learning</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+      #banner {
+        height: 360px;
+        object-fit: cover;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
-    <div id="container">
-      <h1>Jovian Carrers</h1>
-      <img src='https://images.unsplash.com/photo-1630710478039-9c680b99f800?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D' height="200">
-      <h2>About Jovian</h2>
-      <p>Hello there. I am building this Jovian Careers website in order to learn Flask and its functionalities.</p>
-      <h2>Open Positions</h2>
-      <p>Show Jobs here</p>
-      <div>
-        <button>Contact Us</button>
+    <div class="container">
+      <h1 class="text-center mt-2 mb-4">{{ company_name }} Carrers</h1>
+      <img class="img-fluid" id="banner" src='https://images.unsplash.com/photo-1630710478039-9c680b99f800?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'>
+      <h2 class="text-center mt-2 mb-4">About {{ company_name }}</h2>
+      <p class="lead">
+        Hello there. I am building this Jovian Careers website in order to learn Flask and its functionalities.
+      </p>
+      <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+      {% for job in jobs %}
+        {% include 'joblists.html' %}
+      {% endfor %}
+      <div class="text-center">
+        <button class="btn btn-primary btn-lg">Contact Us</button>
       </div>
     </div>
   </body>
