--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,7 @@
     </style>
   </head>
   <body>
+    {% include 'nav.html' %}
     <div class="container">
       <h1 class="text-center mt-2 mb-4">{{ company_name }} Carrers</h1>
       <img class="img-fluid" id="banner" src='https://images.unsplash.com/photo-1630710478039-9c680b99f800?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'>
@@ -26,7 +27,7 @@
         {% include 'joblists.html' %}
       {% endfor %}
       <div class="text-center">
-        <button class="btn btn-primary btn-lg">Contact Us</button>
+        <a class="btn btn-primary btn-lg" href="mailto:saikatbmd9836@gmail.com?subject=Question%20about%20Job%20">Contact Us</a>
       </div>
     </div>
   </body>
