--- a/templates/joblists.html
+++ b/templates/joblists.html
@@ -7,6 +7,10 @@
     {% endif %}
   </div>
   <div class="col-3">
-    <a href=mailto:saikatbmd9836@gmail.com?subject=Application for {{job['title']}}'"" type="button" class="btn btn-outline-primary">Apply</a>
+    <a href="/job/{{job['id']}}" type="button" class="btn btn-outline-primary">Apply</a>
   </div>
 </div>
+
+
+
+<!-- <a href="mailto:saikatbmd9836@gmail.com?subject=Application for {{job['title']}}'" type="button" class="btn btn-outline-primary">Apply</a> -->
