--- a/templates/home.html
+++ b/templates/home.html
@@ -1,23 +1,13 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Flask Learning</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-      #banner {
-        height: 360px;
-        object-fit: cover;
-        width: 100%;
-      }
-    </style>
+    {% include 'bootstrap.html' %}
   </head>
   <body>
     {% include 'nav.html' %}
     <div class="container">
-      <h1 class="text-center mt-2 mb-4">{{ company_name }} Carrers</h1>
-      <img class="img-fluid" id="banner" src='https://images.unsplash.com/photo-1630710478039-9c680b99f800?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'>
+      {% include 'banner.html' %}
       <h2 class="text-center mt-2 mb-4">About {{ company_name }}</h2>
       <p class="lead">
         Hello there. I am building this Jovian Careers website in order to learn Flask and its functionalities.
