--- a/templates/dynamic_dropdow.html
+++ b/templates/dynamic_dropdow.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Application Submitted</title>
+  <title>Dynamic Dropdown</title>
   {% include 'bootstrap.html' %}
 </head>
 <body>
